[2.2.2 권한 설정과 표현식] 설정 API 확인

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -188,7 +188,74 @@
 /* 세션 관리 */
 .sessionManagement()
     .invalidSessionUrl("/login") // 세션 유효하지 않는 경우 페이지 이동
-```    
+```
+
+- 시나리오 디버깅 하기 
+    - 서버 접근 시 최대 세션 수에 초과되는 경우
+        1. 이전 세션을 종료하는 방식
+            - 첫 번째 사용자 로그인
+                - CompositeSessionAuthenticationStrategy
+                    - SessionAuthenticationStrategy의 구현체가 돌면서 처리
+                - ConcurrentSessionControlAuthenticationStrategy
+                    - 93 Line: final List<SessionInformation> sessions = sessionRegistry.getAllSessions(authentication.getPrincipal(), false);
+                        - 해당 계정으로 저장된 세션의 개수 확인
+                    - 97 Line: int allowedSessions = getMaximumSessionsForThisUser(authentication);
+                        - 기존에 설정된 세션 정보의 개수를 확인
+                    - 99 Line: if (sessionCount < allowedSessions) { return; }
+                        - 설정된 세션 개수보다 현 세션 개수가 적은 경우 (size 0) 리턴
+                - AbstractSessionFixationProtectionStrategy
+                    - 96 Line: onSessionChange(originalSessionId, session, authentication);
+                        - 현재 세션 아이디와 새로운 세션아이들 변경
+                        - 127 Line: applicationEventPublisher.publishEvent(new SessionFixationProtectionEvent(auth, originalSessionId, newSession.getId()));
+                - RegisterSessionAuthenticationStrategy
+                    - 66 Line: sessionRegistry.registerNewSession(request.getSession().getId(),authentication.getPrincipal());
+                        - 변경된 세션을 등록
+                    - SessionRegistryImpl
+                        - 119 Line: registerNewSession(String sessionId, Object principal)
+                            - 변경된 세션을 등록하는 메서드
+                        - 132 Line: sessionIds.put(sessionId, new SessionInformation(principal, sessionId, new Date()));
+                        - 135 Line: principals.compute(principal, (key, sessionsUsedByPrincipal) -> { ... }
+                            - 변경된 세션 정보를 등록
+            - 두 번째 사용자 로그인
+                - ConcurrentSessionControlAuthenticationStrategy
+                    - 93 Line: final List<SessionInformation> sessions = sessionRegistry.getAllSessions(authentication.getPrincipal(), false);
+                        - 해당 계정으로 저장된 세션의 개수 확인
+                    - 97 Line: int allowedSessions = getMaximumSessionsForThisUser(authentication);
+                        - 기존에 설정된 세션 정보의 개수를 확인
+                    - 125 Line: allowableSessionsExceeded(sessions, allowedSessions, sessionRegistry);
+                        - 허용된 세션을 초과 로직 수행
+                        - maxSessionsPreventsLogin(true) 설정 시
+                            - 154 Line: if (exceptionIfMaximumExceeded || (sessions == null)) { throw new SessionAuthenticationException(..); }
+                                - 최대 세션 수가 초과되는경우 인증 싫패 처리
+                        - 162 ~ 167 Line: ... session.expireNow(); 
+                            - 세션 expire 처리 
+                - AbstractAuthenticationProcessingFilter
+                    - 230 Line: unsuccessfulAuthentication(request, response, failed);
+                        - 인증 실패 처리 로직 실행 
+                        - 342 Line: SecurityContextHolder.clearContext();
+                            - 인증 객체 삭제처리
+                        - 350 Line: rememberMeServices.loginFail(request, response);
+                        - 352 Line: failureHandler.onAuthenticationFailure(request, response, failed);
+                            - 실패 처리
+
+        2. 이후 세션 접근을 거부하는 방식
+            - 두 번째 사용자 로그인
+                - ConcurrentSessionControlAuthenticationStrategy
+                    - 93 Line: final List<SessionInformation> sessions = sessionRegistry.getAllSessions(authentication.getPrincipal(), false);
+                        - 해당 계정으로 저장된 세션의 개수 확인
+                    - 97 Line: int allowedSessions = getMaximumSessionsForThisUser(authentication);
+                        - 기존에 설정된 세션 정보의 개수를 확인
+                    - 125 Line: allowableSessionsExceeded(sessions, allowedSessions, sessionRegistry);
+                        - 162 ~ 167 Line: ... session.expireNow(); 
+                            - 세션 expire 처리
+            - 첫 번째 사용자 페이지 이동 시
+                - ConcurrentSessionFilter
+                    - 130 Line: SessionInformation info = sessionRegistry.getSessionInformation(session.getId());
+                        - 세션 정보를 가져옴
+                    - 134 Line: if (info.isExpired()) {
+                        - 세션 expired 확인
+                    - 140 Line: doLogout(request, response);
+                        - 로그아웃 처리
 
 ### 2.1.12. 세션 고정 보호
 - 인증 할 때마다 세션 쿠키를 새로 발급하여 공격자의 쿠키 조작을 방지 
@@ -251,16 +318,81 @@
         - 인증 실패 전략
         - 세션 만료 전략
         
-### 2.1.16. 권한 설정
 
-### 2.1.17 표현식
+## 2.2. 인가 API
 
-## 2.2. 인증 / 인가 API
+### 2.2.1. 권한 설정
+- 선언적 방식
+    - URL
+        - 경로에 대한 권한정보를 통한 인가 처리 등록
+            - hasRole("ROLE"), access("hasRole('ADMIN') or hasRole('SYS')")
+            - 설정 시 구체적인 경로가 먼저오고 그 보다 큰 범위의 경로를 뒤에 설정하도록 해야 한다.
+    - Method
+    
+- 동적 방식
+    - URL
+    - Method
 
-### 2.2.1. ExceptionTranslationFilter
+### 2.2.2. 표현식 
+- HttpSecurity 클래스 인가 API 리스트
+    1. authenticated()
+        - 인증된 사용자의 접근을 허용
+    2. fullyAuthenticated()
+        - 인증된 사용자의 접근을 허용, rememberMe 인증 제외
+    3. permitAll()
+        - 무조건 접근을 허용
+    4. denyAll()
+        - 무조건 접근을 허용하지 않음
+    5. anonymous()
+        - 익명사용자의 접근을 허용
+    6. rememberMe()
+        - remember-me cookie 를 통해 인증된 사용자의 접근을 허용
+    7. access(String)
+        - 주어진 SpEL 표현식의 평가 결과가 true이면 접근을 허용
+    8. hasRole(String)
+        - 사용자가 주어진 역할이 있다면 접근을 허용
+    9. hasAuthority(String)
+        - 사용자가 주어진 권한이 있다면 접근을 허용
+    10. hasAnyRole(String...)
+        - 사용자가 주어진 권한이 있다면 접근을 허용
+    11. hasAnyAuthority(String...)
+        - 사용자가 주어진 권한 중 어떤 것이라도 있다면 접근을 허용
+    12. hasIpAddress(String)
+        - 주어진 IP로부터 요청이 왔다면 접근을 허용
 
-### 2.2.2. AuthenticationException
+- 유저 권한 설정
+    - 권한에 대한 위계가 있지 않음
+    - 코드에 권한 설정이되어 있어 실시간으로 수정할 수 없으므로 자원관리에 비효율적
 
-### 2.2.3. AccessDeniedException
+```
+/* 인가 API 설정 테스트를 위한 InMemory 계정 등록 */
+@Override
+protected void configure(AuthenticationManagerBuilder auth) throws Exception {
+    auth.inMemoryAuthentication().withUser("user").password("{noop}1234").roles("USER");
+    auth.inMemoryAuthentication().withUser("sys").password("{noop}1234").roles("SYS");
+    auth.inMemoryAuthentication().withUser("admin").password("{noop}1234").roles("ADMIN");
+}
 
-### 2.2.4. RequestCacheAwareFilter
+@Override
+protected void configure(HttpSecurity http) throws Exception {
+    // 인가 정책
+    http
+            /* 모든 경로에 대해서 권한 요청 설정 */
+            .authorizeRequests()
+                /* /user 경로의 request가 들어오는 경우 인가 처리를 통해 USER role을 가진 사용자에 대해서 resource를 제공하겠다는 설정 */
+                .antMatchers("/user").hasRole("USER")
+                .antMatchers("/admin/pay").hasRole("ADMIN")
+                .antMatchers("/admin/**").access("hasRole('ADMIN') or hasRole('SYS')")
+
+            .anyRequest()
+            .authenticated()
+```
+
+### 2.2.3. ExceptionTranslationFilter
+- 
+
+### 2.2.4. AuthenticationException
+
+### 2.2.5. AccessDeniedException
+
+### 2.2.6. RequestCacheAwareFilter
