[2.1.15 ConcurrentSessionFilter] flow, breakpoint 정리

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -190,6 +190,73 @@
     .invalidSessionUrl("/login") // 세션 유효하지 않는 경우 페이지 이동
 ```
 
+### 2.1.12. 세션 고정 보호
+- 인증 할 때마다 세션 쿠키를 새로 발급하여 공격자의 쿠키 조작을 방지 
+- 사용자의 쿠키를 공격자의 쿠키로 인증처리 한 뒤 공격자가 해당 쿠키로 인증하는 세션 고정 공격을 방지 하기 위한 설정
+
+```
+/* 세션 고정 보호 설정 */
+.sessionFixation()
+
+    /* 세센 고정 보호를 사용하지 않는 경우 위와 같은 문제가 발생할 수 있음 */
+     .none()
+
+    /* Servlet 3.1 미만 버전 일 때 default 값 */
+    /* 세션을 생성하되 기존 세션 정보가 있다면 사용할 수 있음 */
+     .migrateSession()
+    
+    /* 새로운 인증 세션으로 변경하는 방법 */
+     .newSession()
+
+    /* Servlet 3.1 이상 버전 일 때 default 값 */
+    /* 세션을 생성하되 기존 세션 정보가 있다면 사용할 수 있음 */
+    .changeSessionId()
+```
+
+### 2.1.13. 세션 정책
+- 세션 정책
+    - Always
+    - if_Required
+    - Never
+    - Stateless
+
+### 2.1.14. SessionManagementFilter
+1. 세션 관리
+    - 인증 시 사용자의 세션 정보를 등록, 조회, 삭제 등의 세션 이력을 관리
+
+2. 동시적 세션 제어
+    - 동일 계정으로 접속이 허용되는 최대 세션 수를 제한
+    - ConcurrentSessionControlAuthenticationStrategy
+    
+3. 세션 고정 보호
+    - 인증 할 때마다 세션 쿠키를 새로 발급하여 공격자의 쿠키 조작을 방지
+    - ChangeSessionIdAuthenticationStrategy
+     
+4. 세션 생성 정책
+    - Always, if_Required, Never, Stateless
+
+### 2.1.15. ConcurrentSessionFilter
+- 매 요청마다 현재 사용자의 세션 만료 여부 체크
+- 세션이 만료되었을 경우 즉시 만료 처리
+- session.isExpired() == true
+    - 로그아웃 처리
+    - 즉시 오류 페이지 응답
+
+- check point
+    - 동시적 세션 제어를 처리하기위해 ConcurrentSessionFilter와 SessionManagementFilter의 처리과정을 살펴볼 것
+
+![ConcurrentSessionFilter](/docs/img/breakpoint/ConcurrentSessionFilter.png)
+
+- 동시적 세션 제어 전략 시나리오 Flow
+
+![SessionManagementFilter](/docs/img/flow/flow_SessionManagementFilter.png)
+
+- 시나리오
+    1. Session의 등록
+    2. 동일 계정 접속 시 세션 처리 방식
+        - 인증 실패 전략
+        - 세션 만료 전략
+
 - 시나리오 디버깅 하기 
     - 서버 접근 시 최대 세션 수에 초과되는 경우
         1. 이전 세션을 종료하는 방식
@@ -256,68 +323,6 @@
                         - 세션 expired 확인
                     - 140 Line: doLogout(request, response);
                         - 로그아웃 처리
-
-### 2.1.12. 세션 고정 보호
-- 인증 할 때마다 세션 쿠키를 새로 발급하여 공격자의 쿠키 조작을 방지 
-- 사용자의 쿠키를 공격자의 쿠키로 인증처리 한 뒤 공격자가 해당 쿠키로 인증하는 세션 고정 공격을 방지 하기 위한 설정
-
-```
-/* 세션 고정 보호 설정 */
-.sessionFixation()
-
-    /* 세센 고정 보호를 사용하지 않는 경우 위와 같은 문제가 발생할 수 있음 */
-     .none()
-
-    /* Servlet 3.1 미만 버전 일 때 default 값 */
-    /* 세션을 생성하되 기존 세션 정보가 있다면 사용할 수 있음 */
-     .migrateSession()
-    
-    /* 새로운 인증 세션으로 변경하는 방법 */
-     .newSession()
-
-    /* Servlet 3.1 이상 버전 일 때 default 값 */
-    /* 세션을 생성하되 기존 세션 정보가 있다면 사용할 수 있음 */
-    .changeSessionId()
-```
-
-### 2.1.13. 세션 정책
-- 세션 정책
-    - Always
-    - if_Required
-    - Never
-    - Stateless
-
-### 2.1.14. SessionManagementFilter
-1. 세션 관리
-    - 인증 시 사용자의 세션 정보를 등록, 조회, 삭제 등의 세션 이력을 관리
-
-2. 동시적 세션 제어
-    - 동일 계정으로 접속이 허용되는 최대 세션 수를 제한
-    - ConcurrentSessionControlAuthenticationStrategy
-    
-3. 세션 고정 보호
-    - 인증 할 때마다 세션 쿠키를 새로 발급하여 공격자의 쿠키 조작을 방지
-    - ChangeSessionIdAuthenticationStrategy
-     
-4. 세션 생성 정책
-    - Always, if_Required, Never, Stateless
-
-### 2.1.15. ConcurrentSessionFilter
-- 매 요청마다 현재 사용자의 세션 만료 여부 체크
-- 세션이 만료되었을 경우 즉시 만료 처리
-- session.isExpired() == true
-    - 로그아웃 처리
-    - 즉시 오류 페이지 응답
-
-- check point
-    - 동시적 세션 제어를 처리하기위해 ConcurrentSessionFilter와 SessionManagementFilter의 처리과정을 살펴볼 것
-
-- 시나리오
-    1. Session의 등록
-    2. 동일 계정 접속 시 세션 처리 방식
-        - 인증 실패 전략
-        - 세션 만료 전략
-        
 
 ## 2.2. 인가 API
 
