[2.2.3 ExceptionTranslationFilter] 시나리오 3번 디버깅 후 넘어갈 것

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -338,7 +338,7 @@
     - URL
     - Method
 
-### 2.2.2. 표현식 
+### 2.2.2. 표현식
 - HttpSecurity 클래스 인가 API 리스트
     1. authenticated()
         - 인증된 사용자의 접근을 허용
@@ -394,8 +394,86 @@ protected void configure(HttpSecurity http) throws Exception {
 ```
 
 ### 2.2.3. ExceptionTranslationFilter
-- 
+- 인가 작업 시 발생하는 예외를 처리하는 필터
+- 마지막에서 두번째 위치에 존재하는 필터
 
+
+- configure 설정 코드
+
+```
+/* 인가 정책 */
+http
+    /* 모든 경로에 대해서 권한 요청 설정 */
+    .authorizeRequests()
+    ...
+    ;
+
+/* formLogin 설정 */
+http
+    .formLogin()
+    /* 캐시 필터 구현 시 formLogin 에 추가되는 handler */
+    .successHandler(new AuthenticationSuccessHandler() {
+        @Override
+        public void onAuthenticationSuccess(HttpServletRequest request, HttpServletResponse response, Authentication authentication) throws IOException, ServletException {
+            RequestCache requestCache = new HttpSessionRequestCache();
+            SavedRequest savedRequest = requestCache.getRequest(request, response);
+            String redirectUrl = savedRequest.getRedirectUrl();
+            response.sendRedirect(redirectUrl);
+        }
+    })
+    ;
+
+/* 인가 예외시 실행 handler 설정 */
+http
+    .exceptionHandling()
+    /* 인가 프로세스 전 요청(request) 값을 갖고 있는 EntryPoint 클래스 (시나리오 2번 수행 시 주석처리 필요) */
+    .authenticationEntryPoint(new AuthenticationEntryPoint() {
+        @Override
+        public void commence(HttpServletRequest request, HttpServletResponse response, AuthenticationException authException) throws IOException, ServletException {
+            response.sendRedirect("/login");
+        }
+    })
+    /* 접근 거부 예외 처리 handler*/
+    .accessDeniedHandler(new AccessDeniedHandler() {
+        @Override
+        public void handle(HttpServletRequest request, HttpServletResponse response, AccessDeniedException accessDeniedException) throws IOException, ServletException {
+            response.sendRedirect("/denied");
+        }
+    })
+    ;
+```
+
+- 시나리오
+    1. 권한이 없는 resource에 접근 하려는 사용자 발생 시 flow
+        - ExceptionTranslatorFilter
+            - 177 Line: else if (exception instanceof AccessDeniedException) {
+                - 인증을 받지 않은 사용자가 접근 시 AccessDeniedHandler로 가지않고 AccessDeniedException 발생
+            - 209 Line: SecurityContextHolder.getContext().setAuthentication(null);
+            - 210 Line: requestCache.saveRequest(request, response);
+                - HttpSessionRequestCache
+                    - 51 Line: public void saveRequest(HttpServletRequest request, HttpServletResponse response) {
+                        - 60 Line: request.getSession().setAttribute(this.sessionAttrName, savedRequest);
+                        - 현재 request 값을 저장하여 설정 정보를 제공
+                        
+            - 212 Line: authenticationEntryPoint.commence(request, response, reason);
+                - 현재 request 값을 가지고 redirect 하도록 구현해 놓은 익명 클래스로 이동
+
+    2. 로그인 성공 후 (인가 실패 시) 인가 예외 발생 처리 flow
+        - 177 Line: else if (exception instanceof AccessDeniedException) {
+            - 인증을 받지 않은 사용자가 접근 시 AccessDeniedHandler로 가지않고 AccessDeniedException 발생
+        - 178 Line: Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+            - 인증 정보 확인 
+        - 179 Line: if (authenticationTrustResolver.isAnonymous(authentication) || authenticationTrustResolver.isRememberMe(authentication)) {
+            - 익명 클래스 또는 remember-me에 저장된 인증 정보가 아닌경우
+        - 198 Line: accessDeniedHandler.handle(request, response,(AccessDeniedException) exception);
+            - 접근 권한 거부로 인해 '/denied' 페이지로 이동하는 로직을 구현해 놓은 익명 클래스로 이동
+
+    3. 인증 없이 '/' 페이지에 접근, redirect 페이지에서 다시 인증 하는 경우 cache 정보를 통해 '/' 페이지에 접근하는 flow 
+        - RequestCacheAwareFilter
+            - 60 Line: HttpServletRequest wrappedSavedRequest = requestCache.getMatchingRequest((HttpServletRequest) request, (HttpServletResponse) response);
+                - request 값이 존재하는지 확인, 값이 존재하는 경우 해당 값을 다음 필터로 넘겨주는 역할
+        
+    
 ### 2.2.4. AuthenticationException
 
 ### 2.2.5. AccessDeniedException
