[2.3. CsrfFilter] ExceptionTranslationFilter 시나리오 3번, csrfFilter 정리

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -393,7 +393,12 @@ protected void configure(HttpSecurity http) throws Exception {
             .authenticated()
 ```
 
-### 2.2.3. ExceptionTranslationFilter
+### 2.2.3 인가 프로세스를 돕는 클래스들
+- ExceptionTranslationFilter
+- AuthenticationException
+- AccessDeniedException
+- RequestCacheAwareFilter
+
 - 인가 작업 시 발생하는 예외를 처리하는 필터
 - 마지막에서 두번째 위치에 존재하는 필터
 
@@ -444,7 +449,7 @@ http
 ```
 
 - 시나리오
-    1. 권한이 없는 resource에 접근 하려는 사용자 발생 시 flow
+    1. 로그인 안되고 권한이 없는 resource에 접근 하려는 사용자 발생 시 flow
         - ExceptionTranslatorFilter
             - 177 Line: else if (exception instanceof AccessDeniedException) {
                 - 인증을 받지 않은 사용자가 접근 시 AccessDeniedHandler로 가지않고 AccessDeniedException 발생
@@ -468,14 +473,90 @@ http
         - 198 Line: accessDeniedHandler.handle(request, response,(AccessDeniedException) exception);
             - 접근 권한 거부로 인해 '/denied' 페이지로 이동하는 로직을 구현해 놓은 익명 클래스로 이동
 
-    3. 인증 없이 '/' 페이지에 접근, redirect 페이지에서 다시 인증 하는 경우 cache 정보를 통해 '/' 페이지에 접근하는 flow 
-        - RequestCacheAwareFilter
-            - 60 Line: HttpServletRequest wrappedSavedRequest = requestCache.getMatchingRequest((HttpServletRequest) request, (HttpServletResponse) response);
-                - request 값이 존재하는지 확인, 값이 존재하는 경우 해당 값을 다음 필터로 넘겨주는 역할
-        
-    
-### 2.2.4. AuthenticationException
+    3. 인증 없이 '/' 페이지에 접근, redirect 페이지에서 다시 인증 하는 경우 cache 정보를 통해 '/' 페이지에 접근하는 flow
+        - 인증 없이 '/' 페이지에 접근
+            - RequestCacheAwareFilter
+                - 60 Line: HttpServletRequest wrappedSavedRequest = requestCache.getMatchingRequest((HttpServletRequest) request, (HttpServletResponse) response);
+                    - request 값이 존재하는지 확인, 값이 존재하는 경우 해당 값을 다음 필터로 넘겨주는 역할
+                - HttpSessionRequestCache
+                    - 90 Line: public HttpServletRequest getMatchingRequest(HttpServletRequest request,HttpServletResponse response) {
+                    - 69 Line: public SavedRequest getRequest(HttpServletRequest currentRequest, HttpServletResponse response) {
+                        - 71 Line: HttpSession session = currentRequest.getSession(false);
+                            - 세션 정보를 가져오려고하나 값이 없음
+                - ExceptionTranslationFilter
+                    - 177 Line: else if (exception instanceof AccessDeniedException) {
+                        - 다시 예외 발생
+                    - 204 Line: protected void sendStartAuthentication(... ) throws ServletException, IOException {
+                        - 210 Line: requestCache.saveRequest(request, response);
+                            - HttpSessionRequestCache
+                                - 60 Line: request.getSession().setAttribute(this.sessionAttrName, savedRequest);
+                                    - session정보에 해당하는 사용자의 request를 저장
+        - redirect 페이지에서 다시 인증하여 저장된 cache를 통해 '/' 페이지에 접근
+            - SecurityConfig
+                - RequestCache requestCache = new HttpSessionRequestCache();
+                - SavedRequest savedRequest = requestCache.getRequest(request, response);
+                - String redirectUrl = savedRequest.getRedirectUrl();
+                - response.sendRedirect(redirectUrl);
+                    - 인증 시 이전에 가지고 있던 request정보를 통해 '/' 로 이동
+                    
+                - HttpSessionRequestCache
+                    - 90 Line: public HttpServletRequest getMatchingRequest(HttpServletRequest request,HttpServletResponse respo
+                        - ExceptionTranslationFilter의 210 Line에서 requestCache.saveRequest(request, response); 를 통해 저장된 정보를 사용가능 상태
+                    - 73 ~ 75 Line: if (session != null) { return (SavedRequest) session.getAttribute(this.sessionAttrName); }
+                        - 저장된 세션에 해당하는 request 정보를 가져옴
+                    - 92 Line: SavedRequest saved = getRequest(request, response);
+                        - saved라는 변수를 통해 request 정보를 호출 할 수 있음
+                    - 101 Line: return new SavedRequestAwareWrapper(saved, request);
+                        - 캐싱된 데이터를 다음 필터로 전달하는 역할을 request 객체가 아닌 SavedRequestAwareWrapper라는 객체가 함 
 
-### 2.2.5. AccessDeniedException
+## 2.3. CsrfFilter
+- 기본적으로 설정되어 있는 springSecurityFilterChain 에 있는 csrf 의 존재 이유와 수행 방식
+    - csrf ?
+        - csrf 원리
 
-### 2.2.6. RequestCacheAwareFilter
+- 시나리오
+    1. csrfToken 없이 '/' 접근 시 csrfFilter 처리 Flow
+        - CsrfFilter
+            - 107 Line: CsrfToken csrfToken = this.tokenRepository.loadToken(request);
+                - request에 해당하는 csrfToken을 조회
+            - 109 Line: final boolean missingToken = csrfToken == null;
+                - csrfToken 값이 존재하지 않으므로 ture 값 저장
+            - 110 Line: csrfToken = this.tokenRepository.generateToken(request);
+            - 111 Line: this.tokenRepository.saveToken(csrfToken, request, response);
+                - 서버에 request에 해당하는 token이 없으므로 새로 생성 및 저장
+
+            - 113 Line: request.setAttribute(CsrfToken.class.getName(), csrfToken);
+            - 114 Line: request.setAttribute(csrfToken.getParameterName(), csrfToken);
+                - 생성된 csrfToken을 request에 저장
+                - csrfToken.getParameterName() -> "_csrf"
+                
+            - 121 Line: String actualToken = request.getHeader(csrfToken.getHeaderName());
+                - csrfToken의 헤더 값에 해당하는 request의 헤더 값을 호출하여 actualToken으로 사용
+                - csrfToken.getHeaderName() -> "X-CSRF-TOKEN"
+                
+            - 125 Line: if (!csrfToken.getToken().equals(actualToken)) {
+                - 서버의 token과 생성된 토큰 비교하여 같지 않으면 Invalid csrf 예외처리
+            - 130 Line: if (missingToken) { ... }
+                - accessDeniedHandler로 접근 불가 예외처리
+
+    2. csrfToken 헤더에 담아서 '/' 접근 시 csrfFilter 처리 Flow
+        - X-CSRF-TOKEN: 4017f008-d6df-4933-97fa-96afd01d7389
+        - CsrfFilter
+            - 107 Line: CsrfToken csrfToken = this.tokenRepository.loadToken(request);
+                - request에 해당하는 csrfToken을 조회
+            - 109 Line: final boolean missingToken = csrfToken == null;
+                - 서버에 저장된 csrfToken 값이 존재하므로 false 값 저장
+            - 113 Line: request.setAttribute(CsrfToken.class.getName(), csrfToken);
+            - 114 Line: request.setAttribute(csrfToken.getParameterName(), csrfToken);
+                - 생성된 csrfToken을 request에 저장
+                - csrfToken.getParameterName() -> "_csrf"
+            - 121 Line: String actualToken = request.getHeader(csrfToken.getHeaderName());
+                - request에 저장된 csrfToken의 값을 조회
+                - csrfToken.getHeaderName() -> "X-CSRF-TOKEN"
+            - 125 Line: if (!csrfToken.getToken().equals(actualToken)) {
+                - 서버의 token과 생성된 토큰 비교하여 같지 않으면 Invalid csrf 예외처리
+            - 141 Line: filterChain.doFilter(request, response);
+                - 다음 필터로 이동
+        - BasicController
+            - @PostMapping("/") public String csrf() { return "Home"; }
+                - csrfFilter의 작업을 마치고 requestMapping된 컨트롤러 로직 수행
