--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -259,7 +259,7 @@
 
 - 시나리오 디버깅 하기 
     - 서버 접근 시 최대 세션 수에 초과되는 경우
-        1. 이전 세션을 종료하는 방식
+        1. 이후 세션 접근을 거부하는 방식
             - 첫 번째 사용자 로그인
                 - CompositeSessionAuthenticationStrategy
                     - SessionAuthenticationStrategy의 구현체가 돌면서 처리
@@ -272,7 +272,7 @@
                         - 설정된 세션 개수보다 현 세션 개수가 적은 경우 (size 0) 리턴
                 - AbstractSessionFixationProtectionStrategy
                     - 96 Line: onSessionChange(originalSessionId, session, authentication);
-                        - 현재 세션 아이디와 새로운 세션아이들 변경
+                        - 현재 세션 아이디와 새로운 세션아이 변경
                         - 127 Line: applicationEventPublisher.publishEvent(new SessionFixationProtectionEvent(auth, originalSessionId, newSession.getId()));
                 - RegisterSessionAuthenticationStrategy
                     - 66 Line: sessionRegistry.registerNewSession(request.getSession().getId(),authentication.getPrincipal());
@@ -305,7 +305,7 @@
                         - 352 Line: failureHandler.onAuthenticationFailure(request, response, failed);
                             - 실패 처리
 
-        2. 이후 세션 접근을 거부하는 방식
+        2. 이전 세션 expired 처리 방식
             - 두 번째 사용자 로그인
                 - ConcurrentSessionControlAuthenticationStrategy
                     - 93 Line: final List<SessionInformation> sessions = sessionRegistry.getAllSessions(authentication.getPrincipal(), false);
@@ -396,7 +396,15 @@ protected void configure(HttpSecurity http) throws Exception {
 ### 2.2.3 인가 프로세스를 돕는 클래스들
 - ExceptionTranslationFilter
 - AuthenticationException
+    - 인증 예외 처리
+        1. AuthenticationEntryPoint 호출
+            - 로그인 페이지 이동, 401 오류코드 전달
+        2. 인증 예외가 발생하기 전의 요청 정볼르 저장
+            - RequestCache: 사용자의 이전 request 정보를 세션에 저장하고 이를 꺼내오는 캐시 메커니즘
+            - SavedRequest: 사용자가 요청했던 request 파라미터 값들, 그 당시의 헤더 값들을 저장
 - AccessDeniedException
+    - 인가 예외 처리
+        - AccessDeniedHandler 에서 예외 처리하도록 제공
 - RequestCacheAwareFilter
 
 - 인가 작업 시 발생하는 예외를 처리하는 필터
