--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -2,14 +2,97 @@
 
 ## 3.1. Proxy
 
-### 3.1.1. DelegatingFilterProxy
+### 3.1.1. DelegatingFilterProxy & FilterChainProxy
+- DelegatingFilterProxy & FilterChainProxy 생성 및 등록 Flow
+    - SecurityFilterAutoConfiguration
+        - 63 Line: DelegatingFilterProxyRegistrationBean registration = new DelegatingFilterProxyRegistrationBean(DEFAULT_FILTER_NAME);
+            - springSecurityFilterChain 이름으로 DelegatingFilerProxy 를 생성
+        - DelegatingFilterProxy
+            - 165 Line: public DelegatingFilterProxy(String targetBeanName, @Nullable WebApplicationContext wac) {
+                - springSecurityFilterChain: DelegatingFilerProxy 형태로 **Filter 생성**
+        - WebSecurityConfiguration
+            - 94 Line: @Bean(name = AbstractSecurityWebApplicationInitializer.DEFAULT_FILTER_NAME)
+                - **springSecurityFilterChain 명으로 Bean**을 등록
+            - 95 Line: public Filter springSecurityFilterChain() throws Exception {
+                - FilterChainProxy를 생성
+        - WebSecurity
+            - 279 Line: protected Filter performBuild() throws Exception {
+            - 296 Line: FilterChainProxy filterChainProxy = new FilterChainProxy(securityFilterChains);
+                - **FilterChainProxy를 Bean생성** 및 등록
 
-### 3.1.2. FilterChainProxy
-
+- DelegateFilterProxy & FilterChainProxy 요청 Flow
+    - DelegatingFilterProxy
+        - 254 Line: public void doFilter(ServletRequest request, ServletResponse response, FilterChain filterChain)
+            - 위임할 Filter를 찾는다. (springSecurityFilterChain)
+        - 264 Line: delegateToUse = initDelegate(wac);
+            - 338 Line: Filter delegate = wac.getBean(targetBeanName, Filter.class);
+                - AnnotationConfigServletWebServerApplicationContext으로부터 getBean() 하여 springSecurityFilterChain라는 이름의 Bean을 가져옴
+                - 가져온 Bean은 FilterChainProxy
+        - 271 Line: invokeDelegate(delegateToUse, request, response, filterChain);
+            - 요청을 위임
+            - 358 Line: delegate.doFilter(request, response, filterChain);
+                - FilterChainProxy를 호출
+    - FilterChainProxy
+        - 172 Line: public void doFilter(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
+            - DelegatingFilterProxy의 request를 전달
+            - 보안 처리를 실시함
+        - 190 Line: private void doFilterInternal(ServletRequest request, ServletResponse response, FilterChain chain) throws IOException, ServletException {
+            - securityFilter의 리스트를 가져와 보안 처리를 수행
+            - 198 Line: List<Filter> filters = getFilters(fwRequest);
+                - securityFilter 리스트를 호출
+            - 214 Line: VirtualFilterChain vfc = new VirtualFilterChain(fwRequest, chain, filters);
+                - FilterChain 내부적으로 가상 VirtualFilterChain을 생성하여 내부적으로 실질적으로 request 처리를 수행함
+                - VirtualFilterChain
+                    - 325 Line: Filter nextFilter = additionalFilters.get(currentPosition - 1);
+                        - 설정된 securtyFilterChain을 관리 및 호출하여 request에 대한 보안처리를 수행함
+                        - 요청을 완로하고나서 Servlet으로 이동
 
 ## 3.2. 필터 초기화와 다중 보안 설정
 
 ### 3.2.1. 필터 초기화 및 다중 설정 클래스
+- 다중 설정이 필요한 이유 ?
+    - 요청 방식에 따라 다른 보안 방식이 필요하는 경우
+
+- 다중 설정 시 처리 방식
+    - requestMatcher 에 따라 다른 Filter 사용
+
+- 다중 설정 시 설정 순서
+    - requestMatcher에 따라 Filter Flow가 다르기 때문에 상세한 requestMapping 부터 선언하도록 한다.
+    - 넓은 범위의 requestMapping부터 선언 시 세부적으로 설정해야 할 경로의 보안이 무시되는 이슈가 발생할 수 있음
+
+```
+@Order(0)
+@EnableWebSecurity
+public class SecurityConfig extends WebSecurityConfigurerAdapter {
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+
+        http.
+                /* 3.1.1. 필터 초기화 및 다중 보안 설정 용 */
+                .antMatcher("/admin/**")
+                .authorizeRequests()
+                .anyRequest().authenticated()
+            .and()
+                .httpBasic();
+    }
+}
+```
+
+```
+@Order(1)
+@Configuration
+public class SecuritySubConfig extends WebSecurityConfigurerAdapter {
+    @Override
+    protected void configure(HttpSecurity http) throws Exception {
+        /* 3.1.1. 필터 초기화와 다중 보안 설정 */
+        http
+                .authorizeRequests()
+                .anyRequest().permitAll()
+            .and()
+                .formLogin();
+    }
+}
+```
 
 ### 3.2.2. WebSecurity, HttpSecurity, WebSecurityConfigurerAdapter
 
