[3.1 DelegatingFilterProxy & FilterChainProxy] Life Cycle Flow 그리기

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -245,7 +245,7 @@
 - check point
     - 동시적 세션 제어를 처리하기위해 ConcurrentSessionFilter와 SessionManagementFilter의 처리과정을 살펴볼 것
 
-![ConcurrentSessionFilter](/docs/img/breakpoint/ConcurrentSessionFilter.png)
+![ConcurrentSessionFilter](/docs/img/breakpoint/4.ConcurrentSessionFilter.png)
 
 - 동시적 세션 제어 전략 시나리오 Flow
 
@@ -394,7 +394,10 @@ protected void configure(HttpSecurity http) throws Exception {
 ```
 
 ### 2.2.3 인가 프로세스를 돕는 클래스들
+![ExceptionTranslationFilter](/docs/img/flow/flow_ExceptionTranslationFilter.png)
 - ExceptionTranslationFilter
+    - 인가 작업 시 발생하는 예외를 처리하는 필터
+    - 마지막에서 두번째 위치에 존재하는 필터
 - AuthenticationException
     - 인증 예외 처리
         1. AuthenticationEntryPoint 호출
@@ -406,10 +409,6 @@ protected void configure(HttpSecurity http) throws Exception {
     - 인가 예외 처리
         - AccessDeniedHandler 에서 예외 처리하도록 제공
 - RequestCacheAwareFilter
-
-- 인가 작업 시 발생하는 예외를 처리하는 필터
-- 마지막에서 두번째 위치에 존재하는 필터
-
 
 - configure 설정 코드
 
@@ -467,7 +466,7 @@ http
                     - 51 Line: public void saveRequest(HttpServletRequest request, HttpServletResponse response) {
                         - 60 Line: request.getSession().setAttribute(this.sessionAttrName, savedRequest);
                         - 현재 request 값을 저장하여 설정 정보를 제공
-                        
+
             - 212 Line: authenticationEntryPoint.commence(request, response, reason);
                 - 현재 request 값을 가지고 redirect 하도록 구현해 놓은 익명 클래스로 이동
 
