--- a/docs/lecture/3.security-core.md
+++ b/docs/lecture/3.security-core.md
@@ -2,6 +2,8 @@
 
 ## 3.1. Proxy
 
+![DelegatingFilterProxy & FilterChainProxy](/docs/img/flow/flow_DelegatingFilterProxy_FilterChainProxy.png)
+
 ### 3.1.1. DelegatingFilterProxy & FilterChainProxy
 - DelegatingFilterProxy & FilterChainProxy 생성 및 등록 Flow
     - SecurityFilterAutoConfiguration
@@ -95,7 +97,6 @@ public class SecuritySubConfig extends WebSecurityConfigurerAdapter {
 ```
 
 ### 3.2.2. WebSecurity, HttpSecurity, WebSecurityConfigurerAdapter
-
 
 ## 3.3. Authentication
 
