[2.2.3 인가 프로세스를 돕는 클래스들] ExceptionTranslationFilter, RequestCacheAwareFilter flow 정리 TODO: [4.1 WebIgnore] 설정 작업하기

--- a/docs/lecture/2.security-basic.md
+++ b/docs/lecture/2.security-basic.md
@@ -394,7 +394,9 @@ protected void configure(HttpSecurity http) throws Exception {
 ```
 
 ### 2.2.3 인가 프로세스를 돕는 클래스들
+
 ![ExceptionTranslationFilter](/docs/img/flow/flow_ExceptionTranslationFilter.png)
+
 - ExceptionTranslationFilter
     - 인가 작업 시 발생하는 예외를 처리하는 필터
     - 마지막에서 두번째 위치에 존재하는 필터
@@ -456,19 +458,19 @@ http
 ```
 
 - 시나리오
-    1. 로그인 안되고 권한이 없는 resource에 접근 하려는 사용자 발생 시 flow
-        - ExceptionTranslatorFilter
-            - 177 Line: else if (exception instanceof AccessDeniedException) {
-                - 인증을 받지 않은 사용자가 접근 시 AccessDeniedHandler로 가지않고 AccessDeniedException 발생
+    1. resource에 접근 하려는 익명의 사용자 발생 시 flow
+        - ExceptionTranslationFilter
+            - 177 Line: if (exception instanceof AuthenticationException) {
+                - 인증을 받지 않은 사용자가 접근 시 AuthenticationException 처리
             - 209 Line: SecurityContextHolder.getContext().setAuthentication(null);
             - 210 Line: requestCache.saveRequest(request, response);
                 - HttpSessionRequestCache
                     - 51 Line: public void saveRequest(HttpServletRequest request, HttpServletResponse response) {
                         - 60 Line: request.getSession().setAttribute(this.sessionAttrName, savedRequest);
                         - 현재 request 값을 저장하여 설정 정보를 제공
-
-            - 212 Line: authenticationEntryPoint.commence(request, response, reason);
-                - 현재 request 값을 가지고 redirect 하도록 구현해 놓은 익명 클래스로 이동
+            - SecurityConfig
+                - 212 Line: authenticationEntryPoint.commence(request, response, reason);
+                    - 현재 request 값을 가지고 redirect 하도록 구현해 놓은 익명 클래스로 이동
 
     2. 로그인 성공 후 (인가 실패 시) 인가 예외 발생 처리 flow
         - 177 Line: else if (exception instanceof AccessDeniedException) {
@@ -491,8 +493,8 @@ http
                         - 71 Line: HttpSession session = currentRequest.getSession(false);
                             - 세션 정보를 가져오려고하나 값이 없음
                 - ExceptionTranslationFilter
-                    - 177 Line: else if (exception instanceof AccessDeniedException) {
-                        - 다시 예외 발생
+                    - 177 Line: else if (exception instanceof AuthenticationException) {
+                        - 다시 인증 예외 발생
                     - 204 Line: protected void sendStartAuthentication(... ) throws ServletException, IOException {
                         - 210 Line: requestCache.saveRequest(request, response);
                             - HttpSessionRequestCache
@@ -505,7 +507,7 @@ http
                 - String redirectUrl = savedRequest.getRedirectUrl();
                 - response.sendRedirect(redirectUrl);
                     - 인증 시 이전에 가지고 있던 request정보를 통해 '/' 로 이동
-                    
+
                 - HttpSessionRequestCache
                     - 90 Line: public HttpServletRequest getMatchingRequest(HttpServletRequest request,HttpServletResponse respo
                         - ExceptionTranslationFilter의 210 Line에서 requestCache.saveRequest(request, response); 를 통해 저장된 정보를 사용가능 상태
